<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="text_welcome">Welcome to the BMI Calculator.</string>
    <string name="text_height">Please enter your height in feet and inches:</string>
    <string name="edit_hint_feet">Feet</string>
    <string name="edit_hint_inches">Inches</string>
    <string name="text_weight">And enter your weight in pounds:</string>
    <string name="edit_hint_weight">Lbs.</string>
    <string name="button_calc_bmi">Calculate BMI</string>
    <string name="text_results">Results</string>
</resources>
